--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 PORT=5001
+B_USER = emdwlekr
+DB_PASSWORD = Rladudcks91
+DB_NAME = mern_third
+GOOGLD_API_KEY = AIzaSyB1pWjcaSMz7Y4FVOrVhawuUmYwNMMoQmM
+JWT_KEY = megasecret_dont_share
