--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5001
-B_USER=emdwlekr
+DB_USER=emdwlekr
 DB_PASSWORD=Rladudcks91
 DB_NAME=mern_third
 GOOGLE_API_KEY=AIzaSyA3ggUiIbf1eQhARCstr0LrXZUHL5ChDwc
