--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DB_PASSWORD=Rladudcks91
 DB_NAME=mern_third
 GOOGLE_API_KEY=AIzaSyA3ggUiIbf1eQhARCstr0LrXZUHL5ChDwc
 JWT_KEY=megasecret_dont_share
+JOKE=wow
